src/test/deca/codegen/valid/testPleinParent.deca
{
        int a=3, b=5, c=7, d;
        float e, f=0.2, result;
        e = (d=2);
        result = -(a+c)*(((((c%b)+e)/f+8.0)*(123%a+0.5)+0.1)-d);
        //println(result);
        if (result == 2*(-60.5)) {
           print("OK");
        }
}
