src/test/deca/codegen/invalid/minusOverflow.deca
{
    float a= 200000000000000000000000000000000000000.0; //10^38
    float b= 200000000000000000000000000000000000000.0; //10^38
    float c= 200000000000000000000000000000000000000.0; //10^38
    float d= 200000000000000000000000000000000000000.0; //10^38

    float f = a-b-c-d;
}
//ERROR Error : arithmetic overflow.
